; ModuleID = '/home/carl/AnghaBench/nginx-rtmp-module/extr_ngx_rtmp_receive.c_ngx_rtmp_fetch_uint32.c'
source_filename = "/home/carl/AnghaBench/nginx-rtmp-module/extr_ngx_rtmp_receive.c_ngx_rtmp_fetch_uint32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NGX_OK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32**, i64*, i64)* @ngx_rtmp_fetch_uint32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ngx_rtmp_fetch_uint32(i32** %0, i64* %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  store i32** %0, i32*** %5, align 8
  store i64* %1, i64** %6, align 8
  store i64 %2, i64* %7, align 8
  %10 = load i64*, i64** %6, align 8
  %11 = bitcast i64* %10 to i32*
  store i32* %11, i32** %8, align 8
  %12 = load i64*, i64** %6, align 8
  store i64 0, i64* %12, align 8
  br label %13

13:                                               ; preds = %28, %3
  %14 = load i64, i64* %7, align 8
  %15 = add nsw i64 %14, -1
  store i64 %15, i64* %7, align 8
  %16 = icmp sge i64 %15, 0
  br i1 %16, label %17, label %29

17:                                               ; preds = %13
  %18 = load i32**, i32*** %5, align 8
  %19 = load i32*, i32** %8, align 8
  %20 = load i64, i64* %7, align 8
  %21 = getelementptr inbounds i32, i32* %19, i64 %20
  %22 = call i64 @ngx_rtmp_fetch(i32** %18, i32* %21)
  store i64 %22, i64* %9, align 8
  %23 = load i64, i64* %9, align 8
  %24 = load i64, i64* @NGX_OK, align 8
  %25 = icmp ne i64 %23, %24
  br i1 %25, label %26, label %28

26:                                               ; preds = %17
  %27 = load i64, i64* %9, align 8
  store i64 %27, i64* %4, align 8
  br label %31

28:                                               ; preds = %17
  br label %13

29:                                               ; preds = %13
  %30 = load i64, i64* @NGX_OK, align 8
  store i64 %30, i64* %4, align 8
  br label %31

31:                                               ; preds = %29, %26
  %32 = load i64, i64* %4, align 8
  ret i64 %32
}

declare dso_local i64 @ngx_rtmp_fetch(i32**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
